fix windows readme and first page

--- a/windows-installer-kit/ploomcake.html
+++ b/windows-installer-kit/ploomcake.html
@@ -13,15 +13,17 @@
         <div>
         <img src="docs/ploomcake-logo.png" />
         </div>
-        <br />
         <h1 style="color:#841B2B;">
           Ploomcake is installed !!!
         </h1>
-        <br />
         <p>
-            The site will be active shortly at <a href="http://localhost:8080">localhost:8080</a>.
+            Take note of the administrator credentials (you can change them later):<br />
+            user: admin<br />
+            password: admin
         </p>
-
+        <p>
+            The site will be active shortly <a href="http://127.0.0.1:8080">here</a>.
+        </p>
     </div>
 </body>
 </html>
